# covariate-adjustment-blogpost

./: .gitignore  README.md  pyproject.toml
notebooks/: covariate_adjustment.ipynb  good_bad_covariates.ipynb  optimal_theta_is_OLS_slope.ipynb
src/: adjustment_methods.py  generator.py  imbalance.py  utils.py
