[tool.poetry]
name = "covariate_adjustment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
numpy = "^1.23.2"
statsmodels = "^0.13.2"
scikit-learn = "^1.1.2"
seaborn = "^0.11.2"
ipykernel = "^6.15.1"
jupyter-packaging = "^0.12.2"
jupyterlab = "^3.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
